update style.css with latest changes

--- a/style.css
+++ b/style.css
@@ -265,7 +265,11 @@ html {
 
 
 
-
+@media (max-width: 768px) {
+  .navcontainer, nav ul {
+    flex-direction: column;
+    align-items: flex-start;
+  }}
 
 
 
