--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ header.scrolled nav ul li a {
       opacity: 0;}
 
 
-.hero {
+/* .hero {
       background: url('/bg.png') no-repeat center center/cover;
       height: 100vh;
       width: 100%;
@@ -109,8 +109,26 @@ header.scrolled nav ul li a {
         font-size: 50px;
         
 
-    }
+    } */
 
+.hero {
+  background: url('/bg.png') no-repeat center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  width: 100%;
+  min-height: 100vh;
+
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 50px;
+
+  font-family: 'Michroma', sans-serif;
+  color: white;
+  font-size: 50px;
+  text-align: center;
+}
 
  .content {
       height: 200vh;
@@ -267,10 +285,83 @@ html {
 
 
 @media (max-width: 768px) {
-  .navcontainer, nav ul {
+  .form-section {
+    width: 100%;
+    margin: 20px 0;
+    padding: 20px;
+  }
+
+  .slay-animate {
+    width: 100%;
+    font-size: 1.5rem;
+    padding: 16px;
+    text-align: center;
+  }
+
+  input, select {
+    width: 100%;
+    max-width: 100%;
+  }
+
+
+
+  .navcontainer {
     flex-direction: column;
-    align-items: flex-start;
-  }}
+    gap: 10px;
+  }
+
+  .form-container {
+    flex-direction: column;
+    margin-top: 40px;
+  }
+
+  .outfit-container {
+    grid-template-columns: 1fr; /* one column on small screens */
+  }
+}
+
+@media (max-width: 480px) {
+  body {
+    padding: 10px;
+  }
+
+  .mystic-scroll {
+    font-size: 1.2rem;
+    position: relative;
+    left:10px ;
+  }
+
+  .navcontainer li {
+    font-size: 14px;
+  }
+}
+
+
+@media (max-width: 768px) {
+  .marquee-track img {
+    height: 280px;
+  }
+}
+@media (max-width: 10000px) {
+  .hero {
+    background-position: left top; 
+    padding: 20px;
+   
+  }
+}
+
+
+
+
+@media (max-width: 480px) {
+  .hero {
+    background-position: left top;  /* for very small devices */
+   font-size:1rem;
+    padding: 10px;
+    min-height: 80vh;
+  }
+}
+
 
 
 
