--- a/style.css
+++ b/style.css
@@ -83,7 +83,10 @@ header.scrolled nav ul li a {
        font-family: 'Michroma', sans-serif;
     }
     
-
+.scrolled.hero{
+  top:0;
+ justify-content: center;
+}
     .hide-on-scroll {
       opacity: 1;
       transition: opacity 0.3s ease;
@@ -253,7 +256,7 @@ padding: 0%;
   
       display: flex;
       flex-direction: column;
-      gap: 15px;
+      gap: 10px;
      align-content: center;
   
     }
