--- a/style.css
+++ b/style.css
@@ -7,12 +7,60 @@
 
    body{
       height: 100%;
-     font-family: 'Times New Roman', Times, serif;
+     font-family: 'Michroma', Times, serif;
       background-color:white;
       }
+#resultOptions {
+  animation: fadeIn 0.8s ease forwards;
+}
 
-   
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
 
+  .card-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
+  
+  margin: 250px 5px 100px 5px;
+}
+.option-card h2{color:#0A400C;
+  font-size: 20px;
+  padding: 10px;
+  background-color: white;
+  border: #515b40 solid 1px;
+  border-radius: 20px;
+
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+
+}
+.option-card {height: 1000px;
+ display: flex;
+  flex-direction: column;
+ justify-content: flex-end;
+ align-items: flex-start;
+ 
+
+ 
+background-size: cover;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+padding: 50px;
+width:900px;
+  cursor: pointer;
+  transition: transform 0.3s ease, background 0.2s ease;
+}
+
+.option-card h2:hover {
+  transform: scale(1.05);
+
+
+}
+.option-card p:hover{
+    color:aliceblue
+}
 header{
       position: fixed;
       top: 0;
@@ -152,54 +200,31 @@ header.scrolled nav ul li a {
      
     }
 
-    .content h2{color: #0A400C;
+    #foryou{color: #0A400C;
         text-align: center;
-        padding: 80px;
-      
+       
+      padding: 80px;
        
         width: 100%;
          font-family: 'Michroma', sans-serif;
-         background-color:white;
+        
          font-size:40px;
     }
 
-
-
-.marquee-track {
-  display: flex;
-  
-  animation: marquee 18s linear infinite;
-  gap: 32px;
- padding: 0px 0 80px 0;
-margin: 0%;
-  
-}
-
-.marquee-track img {
-  height: 450px;
-  border-radius: 12px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.07);
-  object-fit: cover;
-  
-}
-
-@keyframes marquee {
-  0% { transform: translateX(0); }
-  100% { transform: translateX(-50%); }
-}
-    
-.mystic-image-marquee {
+.track{
   display: flex;
   flex-direction: row;
-  
-  overflow: hidden;
-  width: 100%;
-  padding: 20px 0;
- 
-
- 
-
+  gap:20px;
+  /* overflow-x: auto; */
+  height: 400px;
+  padding: 20px;
 }
+.images{
+  overflow-x: auto;
+  height: 400px;
+}
+
+
 
    
 .form-container{
@@ -239,18 +264,28 @@ margin: 0%;
   color: #0A400C;
 
   border:#0A400C solid 1px;
+  box-shadow:  0px 4px 12px rgba(0,0,0,0.1);
+ 
+
+  text-align: center;
+  cursor: pointer;
+  transition: transform 0.3s ease, background 0.2s ease;
 }
+
 
 .form-section h2 {
 margin: 20px;
 background-color: transparent;
 text-align: center;
 padding: 0%;
-     
+font-family: 'Michroma', sans-serif;
+padding:80px;
+  font-size: 40px;}
 
-
-    }
-
+.form-section:hover{  transform: scale(1.02);
+box-shadow: #819067 0px 4px 12px;
+ 
+}
     form {
    
   
