--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ header.scrolled nav ul li a {
     } */
 
 .hero {
-  background: url('/bg.png') no-repeat center center;
+  background: url('/images/bg.png') no-repeat center center;
   background-size:cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -229,11 +229,11 @@ header.scrolled nav ul li a {
    
 .form-container{
   display: flex;
-  flex-direction: row-reverse;
-   
+ justify-content: center;
+ 
    height:max-content;
    margin: 0%;
-   padding:50px 0 50px 30px;
+   padding:80px 0 50px 30px;
 }
 
   .slay-animate {
@@ -257,10 +257,10 @@ header.scrolled nav ul li a {
 
 
    .form-section {
- width: 50%;
+
   
   padding: 40px;
-   background-color: white; 
+ 
   color: #0A400C;
 
   border:#0A400C solid 1px;
@@ -290,7 +290,7 @@ box-shadow: #819067 0px 4px 12px;
    
   
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       gap: 10px;
      align-content: center;
   
@@ -303,6 +303,7 @@ box-shadow: #819067 0px 4px 12px;
     border: 1px solid #ccc;
     border-radius: 4px;
     justify-content: center;
+    background-color: transparent;
   }
 input, select::selection {
     border-color: #0A400C;}
